// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders blue inProgress bar when 1 or more jobs is in progress 1`] = `
<View
  accessibilityLabel="0 of 0 complete, 1 in progress"
  accessibilityRole="progressbar"
  accessible={true}
>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "marginBottom": 8,
          "marginTop": 8,
          "position": "relative",
        },
        {
          "height": 16,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgba(255,255,255,0.3)",
            "borderRadius": 100,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          },
          {
            "backgroundColor": "hsl(51, 17%, 85%)",
            "width": "100%",
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "backgroundColor": "rgba(255,255,255,0.3)",
            "borderRadius": 100,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          },
          {
            "backgroundColor": "hsl(207, 79%, 57%)",
            "width": "0%",
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "backgroundColor": "rgba(255,255,255,0.3)",
            "borderRadius": 100,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          },
          {
            "backgroundColor": "hsl(107, 58%, 33%)",
            "width": "0%",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`renders green CompletedProgress bar when 1 or more jobs is completed 1`] = `
<View
  accessibilityLabel="1 of 2 complete"
  accessibilityRole="progressbar"
  accessible={true}
>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "marginBottom": 8,
          "marginTop": 8,
          "position": "relative",
        },
        {
          "height": 16,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgba(255,255,255,0.3)",
            "borderRadius": 100,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          },
          {
            "backgroundColor": "hsl(51, 17%, 85%)",
            "width": "100%",
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "backgroundColor": "rgba(255,255,255,0.3)",
            "borderRadius": 100,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          },
          {
            "backgroundColor": "hsl(107, 58%, 33%)",
            "width": "50%",
          },
        ]
      }
    />
  </View>
</View>
`;
